--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-hook/window-size": "^3.1.1",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
